package web.repligenvalidation.Entities;

import lombok.Data;

@Data
public class FolderPathEntity {

    private String fileName;

}
