package web.repligenvalidation;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class RepligenValidationApplication {

	public static void main(String[] args) {
		SpringApplication.run(RepligenValidationApplication.class, args);
	}

}
